添加template function 的模板 更新webserver docs
